prevent h1 from wrapping

--- a/client/src/css/global.css
+++ b/client/src/css/global.css
@@ -82,6 +82,7 @@
   h1 {
     font-size: var(--font-size-h1);
     color: var(--color-neutral);
+    white-space: nowrap;
   }
         
     h2 {
